finalized training loop

--- a/data/playground.ipynb
+++ b/data/playground.ipynb
@@ -121,6 +121,136 @@
     "# Step 3: Don't forget to close\n",
     "pool.close()    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "586a7fa9-93c4-467d-9637-9a2de72c0efc",
+   "metadata": {},
+   "source": [
+    "# Check longest string for padding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1db27edf-30c9-45e2-8c8c-a4c11c0f9b04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64670c4bbaea4ffb9a286613a20c491b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/547k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e2e83036d34343a1a230c92426ced706",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/287k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e64a904af40a40e599b77804d8fe6b8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/90.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f3cf14367351481a9c566a8576480c78",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/2.00 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[21191, 8027]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import GPT2Tokenizer\n",
+    "\n",
+    "tokenizer = GPT2Tokenizer.from_pretrained('LorenzoDeMattei/GePpeTto',\n",
+    "                                         bos_token='<|startoftext|>',\n",
+    "                                         eos_token='<|endoftext|>',\n",
+    "                                         pad_token='<|pad|>')\n",
+    "\n",
+    "tokenizer.encode(\"ciao mamma\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "eca10a18-95f4-4808-afdb-8fd0a499f87b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./dataset/sugar_lyrics.txt', encoding=\"utf8\") as f:\n",
+    "    songs = [s.strip('\\n') for s in f.readlines()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f6c87bce-b97a-42a5-8d34-898a66f7325f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The longest song text is 506 tokens long.\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_song = max([len(tokenizer.encode(song)) for song in songs])\n",
+    "\n",
+    "print(f'The longest song text is {max_song} tokens long.')"
+   ]
   }
  ],
  "metadata": {
